After mutiple file upload in Server and Database

--- a/LaidigSystemsC/Views/Account/Register.cshtml
+++ b/LaidigSystemsC/Views/Account/Register.cshtml
@@ -103,3 +103,10 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<style>
+    input, select, textarea {
+        max-width: none !important;
+    }
+
+    
+</style>
