--- a/LaidigSystemsC/Views/Shared/_Layout.cshtml
+++ b/LaidigSystemsC/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
         <div class="grid_12 header-repeat">
             <div id="branding">
                 <div class="floatleft">
-                    <img src="~/Images/laidig-L.png" alt="Logo" />
+                    <img src="~/Images/laidig-L.png" alt="Logo" style="width:200px;" />
                 </div>
                 <div class="floatright">
                     @*<div class="floatleft">
