--- a/LaidigSystemsC/Views/DelayedMoniTouch/Index.cshtml
+++ b/LaidigSystemsC/Views/DelayedMoniTouch/Index.cshtml
@@ -4,7 +4,14 @@
     ViewBag.Title = "";
 }
 
-<h3>@ViewBag.Message</h3>
+@if (ViewBag.Error != null)
+{
+    <h3 style="color:red ;font-family:'Times New Roman', Times, serif;font-size:18px">@ViewBag.Error</h3>
+}
+else
+{
+    <h3 style="color:green;font-family:'Times New Roman', Times, serif;font-size:18px">@ViewBag.Message</h3>
+}
 
 @using (Html.BeginForm("Index", "DelayedMoniTouch", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
