--- a/LaidigSystemsC/Views/DelayedUplaod/Index.cshtml
+++ b/LaidigSystemsC/Views/DelayedUplaod/Index.cshtml
@@ -6,7 +6,15 @@
 }
 
 
-<h3>@ViewBag.Message</h3>
+@if (ViewBag.Error != null)
+{
+    <h3 style="color:red ;font-family:'Times New Roman', Times, serif;font-size:18px">@ViewBag.Error</h3>
+}
+else
+{
+    <h3 style="color:green;font-family:'Times New Roman', Times, serif;font-size:18px">@ViewBag.Message</h3>
+}
+
 
 @using (Html.BeginForm("Index", "DelayedUplaod", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
@@ -27,8 +35,8 @@
                 </tr>
                 <tr>
                     <td>
-                        @Html.RadioButton("rbGrp", "1", isChecked: false) @Html.Label("Delayed Upload")
-                        @Html.RadioButton("rbGrp", "2", isChecked: false) @Html.Label("Instant Upload")
+                        @Html.RadioButton("rbGrp", "Delayed", isChecked: false) @Html.Label("Delayed Upload")
+                        @Html.RadioButton("rbGrp", "Instant", isChecked: false) @Html.Label("Instant Upload")
                     </td>
                 </tr>
             </table>
