--- a/LaidigSystemsC/Views/Shared/_Layout2.cshtml
+++ b/LaidigSystemsC/Views/Shared/_Layout2.cshtml
@@ -13,12 +13,16 @@
             max-width: none !important;
         }
 
-        body {
+       
             /*background-image: url(http://webernautdesigns.com/wp-content/uploads/2013/07/Nature-Sunset-Light-Blur-Background.jpg);*/
-            background-image: url('../../Images/Nature-Sunset-Light-Blur-Background.jpg');
+           
+
+         body{
+            background-image: url('http://localhost/LaidigSystemsC/Images/Background.jpg');
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-size: cover;
+            
         }
     </style>
 </head>
@@ -28,7 +32,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-lg-offset-4">
-                <img src="~/Images/laidig-L.png" class="center-block" style="padding:10px;" />
+                <img src="~/Images/laidig-L.png" class="center-block" style="padding:10px;width:200px" />
                
                 <div style="background-color: #fffcfc;
     border: 1px solid #ffd800;
